2011-04-16 Harri Pitkänen <hatapitk@iki.fi>
	* Support possessive suffixes in Malaga analyzer.

2011-03-31 Harri Pitkänen <hatapitk@iki.fi>
	* Support grammatical tense in Malaga analyzer.
	* Support participles in Malaga analyzer.
	* Increase version number to 3.3.

2011-03-19 Harri Pitkänen <hatapitk@iki.fi>
	* Increase version number to 3.2.
	* Add Java files to source package.

2011-03-06 Harri Pitkänen <hatapitk@iki.fi>
	* Accept soft hyphen in Finnish spell checking if it is placed in a valid
	  hyphenation point.

2011-03-02 Harri Pitkänen <hatapitk@iki.fi>
	* Improve handling of punctuation and http URLs in tokenizer.

2011-02-22 Harri Pitkänen <hatapitk@iki.fi>
	* Add option --disable-extdicts that disables loading all external dictionaries.
	* Increase version number to 3.1.1.

2011-02-15 Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>
	* Fix build with GCC 4.6

2011-01-23 Harri Pitkänen <hatapitk@iki.fi>
	* Fix internal error due to missing break in switch.

2010-12-08 Harri Pitkänen <hatapitk@iki.fi>
	* Add configure option --disable-testtools

2010-12-04 Harri Pitkänen <hatapitk@iki.fi>
	* Consistently return SPELL_FAILED instead of INTERNAL_ERROR
	  when too long word is spell checked.
	* Mark fixed limits deprecated. In the future different backends
	  may have different limits and users of the library should not care.

2010-11-14 Harri Pitkänen <hatapitk@iki.fi>
	* Clear Malaga heap at the end of analyse_item. This reduces
	  the need for garbage collecting and makes bugs in Malaga VM
	  easier to reproduce.

2010-11-10 Harri Pitkänen <hatapitk@iki.fi>
	* Fix strict aliasing bug (Trac #20) and a some const correctness
	  issues that were uncovered by the fix.

2010-11-08 Harri Pitkänen <hatapitk@iki.fi>
	* Update MSVC build files.

2010-10-27 Harri Pitkänen <hatapitk@iki.fi>
	* GC: Allow AutoCorrect rules with more than two match words.
	* Support capitalized first character of sentence when interpreting
	  AutoCorrect rules.
