@@ -202,6 +202,12 @@ are provided only as information for external applications.
    - seuranto
    - keinonto
    - kerrontosti (esim. "nopeasti")
+  
+ KYSYMYSLIITE
+ ============
+  Sanaan liittyy kysymysliite -ko tai -kö. Attribuutin ainoa sallittu
+  arvo on "true". Jos sanaan ei liity kysymysliitettä, attribuuttia
+  ei ole.
 
  WORDBASES
  =========
