@@ -42,6 +42,7 @@ enum MalagaSymbol {
 	MS_TENSE,
 	MS_PARTICIPLE,
 	MS_POSSESSIVE,
+	MS_KYSYMYSLIITE,
 	MS_LAST_SYMBOL
 };
 
