@@ -442,49 +442,49 @@ define @jatko_mm := <sija_monikko_1,
 [alku: "kään",      luokka: liitesana, kielto: yes, äs: ä, jatko: <loppu>];
 [alku: "kaanhan",   luokka: liitesana, äs: a, jatko: <loppu>];
 [alku: "käänhän",   luokka: liitesana, äs: ä, jatko: <loppu>];
-[alku: "ko",        luokka: liitesana, äs: a, jatko: <loppu>];
-[alku: "kö",        luokka: liitesana, äs: ä, jatko: <loppu>];
-[alku: "kokaan",    luokka: liitesana, äs: a, jatko: <loppu>];
-[alku: "kökään",    luokka: liitesana, äs: ä, jatko: <loppu>];
+[alku: "ko",        luokka: liitesana, kysymysliite: yes, äs: a, jatko: <loppu>];
+[alku: "kö",        luokka: liitesana, kysymysliite: yes, äs: ä, jatko: <loppu>];
+[alku: "kokaan",    luokka: liitesana, kysymysliite: yes, äs: a, jatko: <loppu>];
+[alku: "kökään",    luokka: liitesana, kysymysliite: yes, äs: ä, jatko: <loppu>];
 [alku: "pa",        luokka: liitesana, kielto: no, äs: a, jatko: <loppu>];
 [alku: "pä",        luokka: liitesana, kielto: no, äs: ä, jatko: <loppu>];
 [alku: "han",       luokka: liitesana, kielto: no, äs: a, jatko: <loppu>];
 [alku: "hän",       luokka: liitesana, kielto: no, äs: ä, jatko: <loppu>];
-[alku: "kohan",     luokka: liitesana, kielto: no, äs: a, jatko: <loppu>];
-[alku: "köhän",     luokka: liitesana, kielto: no, äs: ä, jatko: <loppu>];
+[alku: "kohan",     luokka: liitesana, kysymysliite: yes, kielto: no, äs: a, jatko: <loppu>];
+[alku: "köhän",     luokka: liitesana, kysymysliite: yes, kielto: no, äs: ä, jatko: <loppu>];
 [alku: "pahan",     luokka: liitesana, kielto: no, äs: a, jatko: <loppu>];
 [alku: "pähän",     luokka: liitesana, kielto: no, äs: ä, jatko: <loppu>];
-[alku: "kos",       luokka: liitesana, äs: a, jatko: <loppu>];
-[alku: "kös",       luokka: liitesana, äs: ä, jatko: <loppu>];
+[alku: "kos",       luokka: liitesana, kysymysliite: yes, äs: a, jatko: <loppu>];
+[alku: "kös",       luokka: liitesana, kysymysliite: yes, äs: ä, jatko: <loppu>];
 [alku: "pas",       luokka: liitesana, äs: a, jatko: <loppu>];
 [alku: "päs",       luokka: liitesana, äs: ä, jatko: <loppu>];
-[alku: "kinko",     luokka: liitesana, äs: a, jatko: <loppu>];
-[alku: "kinkö",     luokka: liitesana, äs: ä, jatko: <loppu>];
-[alku: "kaanko",    luokka: liitesana, äs: a, jatko: <loppu>];
-[alku: "käänkö",    luokka: liitesana, äs: ä, jatko: <loppu>];
+[alku: "kinko",     luokka: liitesana, kysymysliite: yes, äs: a, jatko: <loppu>];
+[alku: "kinkö",     luokka: liitesana, kysymysliite: yes, äs: ä, jatko: <loppu>];
+[alku: "kaanko",    luokka: liitesana, kysymysliite: yes, äs: a, jatko: <loppu>];
+[alku: "käänkö",    luokka: liitesana, kysymysliite: yes, äs: ä, jatko: <loppu>];
 [alku: "kinhan",    luokka: liitesana, kielto: no, äs: a, jatko: <loppu>];
 [alku: "kinhän",    luokka: liitesana, kielto: no, äs: ä, jatko: <loppu>];
-[alku: "kinkohan",  luokka: liitesana, kielto: no, äs: a, jatko: <loppu>];
-[alku: "kinköhän",  luokka: liitesana, kielto: no, äs: ä, jatko: <loppu>];
-[alku: "kinkos",    luokka: liitesana, äs: a, jatko: <loppu>];
-[alku: "kinkös",    luokka: liitesana, äs: ä, jatko: <loppu>];
-[alku: "kaankohan", luokka: liitesana, kielto: no, äs: a, jatko: <loppu>];
-[alku: "käänköhän", luokka: liitesana, kielto: no, äs: ä, jatko: <loppu>];
-[alku: "kaankos",   luokka: liitesana, äs: a, jatko: <loppu>];
-[alku: "käänkös",   luokka: liitesana, äs: ä, jatko: <loppu>];
+[alku: "kinkohan",  luokka: liitesana, kysymysliite: yes, kielto: no, äs: a, jatko: <loppu>];
+[alku: "kinköhän",  luokka: liitesana, kysymysliite: yes, kielto: no, äs: ä, jatko: <loppu>];
+[alku: "kinkos",    luokka: liitesana, kysymysliite: yes, äs: a, jatko: <loppu>];
+[alku: "kinkös",    luokka: liitesana, kysymysliite: yes, äs: ä, jatko: <loppu>];
+[alku: "kaankohan", luokka: liitesana, kysymysliite: yes, kielto: no, äs: a, jatko: <loppu>];
+[alku: "käänköhän", luokka: liitesana, kysymysliite: yes, kielto: no, äs: ä, jatko: <loppu>];
+[alku: "kaankos",   luokka: liitesana, kysymysliite: yes, äs: a, jatko: <loppu>];
+[alku: "käänkös",   luokka: liitesana, kysymysliite: yes, äs: ä, jatko: <loppu>];
 
-[alku: "ko",        luokka: kieltosanan_liitesana, äs: a, jatko: <loppu>];
-[alku: "kö",        luokka: kieltosanan_liitesana, äs: ä, jatko: <loppu>];
+[alku: "ko",        luokka: kieltosanan_liitesana, kysymysliite: yes, äs: a, jatko: <loppu>];
+[alku: "kö",        luokka: kieltosanan_liitesana, kysymysliite: yes, äs: ä, jatko: <loppu>];
 [alku: "pa",        luokka: kieltosanan_liitesana, äs: a, jatko: <loppu>];
 [alku: "pä",        luokka: kieltosanan_liitesana, äs: ä, jatko: <loppu>];
 [alku: "han",       luokka: kieltosanan_liitesana, äs: a, jatko: <loppu>];
 [alku: "hän",       luokka: kieltosanan_liitesana, äs: ä, jatko: <loppu>];
-[alku: "kohan",     luokka: kieltosanan_liitesana, äs: a, jatko: <loppu>];
-[alku: "köhän",     luokka: kieltosanan_liitesana, äs: ä, jatko: <loppu>];
+[alku: "kohan",     luokka: kieltosanan_liitesana, kysymysliite: yes, äs: a, jatko: <loppu>];
+[alku: "köhän",     luokka: kieltosanan_liitesana, kysymysliite: yes, äs: ä, jatko: <loppu>];
 [alku: "pahan",     luokka: kieltosanan_liitesana, äs: a, jatko: <loppu>];
 [alku: "pähän",     luokka: kieltosanan_liitesana, äs: ä, jatko: <loppu>];
-[alku: "kos",       luokka: kieltosanan_liitesana, äs: a, jatko: <loppu>];
-[alku: "kös",       luokka: kieltosanan_liitesana, äs: ä, jatko: <loppu>];
+[alku: "kos",       luokka: kieltosanan_liitesana, kysymysliite: yes, äs: a, jatko: <loppu>];
+[alku: "kös",       luokka: kieltosanan_liitesana, kysymysliite: yes, äs: ä, jatko: <loppu>];
 [alku: "pas",       luokka: kieltosanan_liitesana, äs: a, jatko: <loppu>];
 [alku: "päs",       luokka: kieltosanan_liitesana, äs: ä, jatko: <loppu>];
 [alku: "kä",        luokka: kieltosanan_liitesana, äs: ä, jatko: <loppu>]; # Ei+kä, älä+kä.
