@@ -179,6 +179,7 @@ luokka; alaluokka; jluokka;
     omistusliite_2p;
     omistusliite_3;
   liitesana;
+    kysymysliite;
   liitesana_s;  # Tulkaa+s. Poistetaan Voikossa.
   kieltosanan_liitesana;
   liitesana_pi; # Tulee+pi.
